--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lava-car",
+  "name": "oficina",
   "version": "1.0.0",
   "description": "Lave seu carro com nosso gratuito e muito bom",
   "main": "src/index.js",
